Change log
----------
Version 2.1.0:
	* Add some scripts to display and describe the relations in the DOT
	language.
	* minor bug fixes

Version 2.0.0:
First public release, conforming with PDTB version 2.0